fixes after testing- description-collapsable, zoom, and (x,y) on tutorial

--- a/src/App.css
+++ b/src/App.css
@@ -92,3 +92,6 @@
   border: 3px solid transparent;
   border-image: url(vector-border.png) 30 stretch;
 }
+.hidden{
+  display: none;
+}
